Correction alignement des boutons des filtres et effets de survol

--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ a {
 }
 
 .topnav a {
-    padding-top: 10px;
     float: left;
+    padding-top: 30px;
 }
 
 .topnav-right {
@@ -178,22 +178,21 @@ a {
     display: flex;
     align-items: center;
     gap: 40px;
-    
+    flex-wrap: wrap; /* permet de renvoyer les boutons à la ligne lorsque la largeur de l'écran est trop petite */
+
 }
 
 .search-filter-item {
-    display: inline-flex;
+    display: flex; /* remplacement de inline flex */
+
     padding: 4px 20px;
     align-items: flex-start;
     border-radius: 25px;
     border: 2px solid var(--grey-tint-2, #D9D9D9);
-    transition: transform 0.4s; /*Ajoute une transition pour une animation en douceur */
-} 
+}
 
-.search-filter-item :hover
-{
+.search-filter-item:hover {
     background-color: var(--Blue, #DEEBFF);
-    transform: scale(1.2); /* Au survol, agrandissez le bouton à 1.2 fois sa taille d'origine */
 }
 
 .search-filter-item svg {
@@ -314,6 +313,7 @@ a {
     line-height: normal;
     padding-top: 3px;
 }
+
 .logo {
 
 }
